data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1155.wast
;; 6. **Test Description**:    - Generate a `loop` with a `br_table` that includes an index pointing to an uninitialized or non-existent label.    - **Constraint**: Ensures proper validation and error messaging for undefined labels.    - **Edge Case**: Validates detection and handling of invalid label references.

(assert_invalid
  (module
    (func $br_table_invalid_label
      (loop (result i32)
        (i32.const 0)
        (br_table 1 0)
      )
    )
  )
  "invalid label"
)